# BasicRayTracer

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  RTLib.cpp  RTLib.h  main.cpp  types.h
